# horror-game

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy.yml
game/: Cargo.toml
game/assets/shaders/: tiny_world.wgsl
game/src/: main.rs  state.rs
game/src/plugins/: mod.rs
game/src/plugins/input/: input_update.rs  mod.rs
game/src/plugins/landscape/: landscape_on_exit.rs  landscape_startup.rs  landscape_update.rs  mod.rs
game/src/plugins/landscape/landscape/: biome.rs  chunk.rs  controller.rs  mod.rs  noise.rs
game/src/plugins/player/: mod.rs  player_fixed_update.rs  player_on_enter.rs  player_on_exit.rs  player_startup.rs  player_update.rs
game/src/plugins/shared/: mod.rs
game/src/plugins/shared/marker_components/: main_camera.rs  mod.rs
game/src/plugins/shared/materials/: mod.rs  tiny_world.rs
game/src/plugins/ui/: mod.rs
game/src/plugins/ui/plugins/: mod.rs
game/src/plugins/ui/plugins/main_menu/: main_menu_on_enter.rs  main_menu_on_exit.rs  main_menu_setup.rs  mod.rs
game/src/plugins/util/: mod.rs
game/src/plugins/util/plugins/: mod.rs  previous_translation.rs
game/src/plugins/world/: mod.rs  world_startup.rs
src/routes/: +page.svelte
