[workspace]
resolver = "3"
members = ["game"]

# Debug profile - optimized for fast compilation times
[profile.dev]
opt-level = 1              # Some optimization for better runtime performance without slow compiles

[profile.dev.package."*"]
opt-level = 3              # Optimize dependencies fully (compile once, run many times)

# Release profile - optimized for smallest bundle size
[profile.release]
opt-level = "z"            # Optimize for size
lto = true                 # Enable Link Time Optimization
codegen-units = 1          # Better optimization at cost of compile time
strip = true               # Strip symbols from binary
panic = "abort"            # Abort on panic (smaller binary)